# statistikbolaget

./: .gitignore  LICENSE  Procfile  README.md  main.py  pyproject.toml  requirements.txt  run.py  script.py
app/: external.py  main.py  models.py  prompts.py
app/static/: script.js  style.css
app/templates/: index.html
static/: script.js  style.css
templates/: index.html
